legibility issue of site content

--- a/style.css
+++ b/style.css
@@ -1204,7 +1204,7 @@ object {
 13.0 Structure
 --------------------------------------------------------------*/
 .site-content {
-	background: rgba(255, 255, 255, 0.9);
+	background: rgb(255, 255, 255);
 	margin: 0 auto;
 	max-width: 980px;
 	padding: 2em 0.8em;
